Added test site

--- a/test/index.html
+++ b/test/index.html
@@ -1,8 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head>
-    <title>TableTech.net</title>
+    <title>test.TableTech.net</title>
 </head>
 <body>
-  <h1>Welcome to TableTech.net</h1>
+  <h1>Welcome to test.TableTech.net</h1>
 </body>
 </html>
